2008-05-29 11:20 +0200  Rocco Rutte  <pdmef@gmx.net>  (18e7849e4c7c)

	* doc/Makefile.am: Only install mutt_dotlock(1) if binary is
	installed, too (closes #1601).

2008-05-28 22:22 -0700  Paul Walker  <paul@black-sun.demon.co.uk>  (f4259a92dab6)

	* ChangeLog, doc/Muttrc.head: Make default muttrc header weeding
	tidier. Closes #286.

2008-05-23 01:40 -0400  Todd Zullinger  <tmz@pobox.com>  (73a180edce53)

	* pgp.c: Call mutt_need_hard_redraw() in pgp_decrypt_part().

	This change ensures that the screen is redrawn when using gpg-agent.
	Without this, mutt's navigation keybindings are lost after pinentry
	curses prompts for a passphrase to descrypt a message.

2008-05-28 22:16 -0700  Moritz Schulte  <moritz@g10code.com>  (7fd74c40eced)

	* curs_lib.c: Make sure that the redrawing/reinitializing is done
	always, not only when the environment variable DISPLAY is not set.

2008-05-28 22:05 -0700  Vladimir Marek  <Vladimir.Marek@Sun.COM>  (9d0509641865)

	* configure.ac, m4/iconv.m4: Cosmetic fix to configure
	--help. Closes #3060.

2008-05-28 21:44 -0700  Vincent Lefevre  <vincent@vinc17.org>  (7b8ef3b8ff5a)

	* po/fr.po: Updated French translation

2008-05-23 18:39 +0200  Rocco Rutte  <pdmef@gmx.net>  (8a3a037ec6b3)

	* UPDATING: UPDATING: fix 1.5.18 line as noted by Kyle Wheeler

2008-05-22 20:22 -0700  Brendan Cully  <brendan@kublai.com>  (96a01436f88b)

	* imap/command.c: Escape LSUB mailbox names given to
	mutt_parse_rc_line. Handle literals in STATUS responses for Notes
	compatibility.

2008-05-22 17:01 +0200  Rocco Rutte  <pdmef@gmx.net>  (d612ef757ee9)

	* configure.ac, m4/types.m4: Use C99 macros "PRId64"/"PRId32" to
	format file sizes/offsets if available. This fixes warning about
	mismatching int argument sizes on amd64.

	* init.h: Document that $check_mbox_size should be set before
	mailboxes commands

	* UPDATING: Mention requirement to encode X-Label: headers in
	UPDATING

2008-05-21 23:20 -0700  Rocco Rutte  <pdmef@gmx.net>  (bba92e401440)
